--- a/SIGOFCv3/Areas/THabilitante/Views/Controles/_ManGrilla.cshtml
+++ b/SIGOFCv3/Areas/THabilitante/Views/Controles/_ManGrilla.cshtml
@@ -46,6 +46,18 @@
                                 <th>R. Legal</th>
                                 <th>Región</th>
                                 break;
+                            case "CERTIFICADO_PLANTA":
+                                <th></th>
+                                <th>N°</th>
+                                <th>Fecha de Registro</th>
+                                <th>Número de Incripción</th>
+                                <th>Fecha de Incripción</th>
+                                <th>Modalidad</th>
+                                <th>Título Habililitante</th>
+                                <th>Titular</th>
+                                <th>Departamento</th>
+
+                                break;
                             case "POA":
                                 <th></th>
                                 <th></th>
